--- a/frontend/components/custom/heroBanner/style.css
+++ b/frontend/components/custom/heroBanner/style.css
@@ -27,27 +27,62 @@
     font-family: "Inter", sans-serif;
     font-weight: 400;
     line-height: 28px;
-    font-size: 1.25rem;
+    font-size: 20px;
     margin: 0 auto;
     background: linear-gradient(98deg, #646464 43.06%, #858585 91.81%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-bottom: 24px;
-    letter-spacing: -0.4px;
+    margin-bottom: 34px;
+    letter-spacing: -0.69px;
 }
 
 .herobanner_get_started_button {
     font-weight: 650;
-    font-size: 20px;
+    font-size: 21px;
     font-family: Inter, sans-serif;
     line-height: 24px;
     letter-spacing: -.36px;
     background-color: black;
     padding: 14px 45px;
     color: white;
-    border-radius: 16px;
+    border-radius: 17px;
     height: 67px;
     width: 325px;
-    margin-top: 10px;
-    margin-bottom:10px;
+}
+
+.herobanner_get_started_button_outer_div1 {
+    background: rgb(255, 255, 255);
+    padding: 2px;
+    border-radius: 18px
+}
+
+.herobanner_get_started_button_outer_div2 {
+    padding: 3px;
+    border-radius: 21px;
+    position: relative;
+    overflow: hidden;
+}
+
+.herobanner_get_started_button_outer_div2::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0deg);
+    background: conic-gradient(rgb(0, 145, 255), rgb(255, 2, 240), rgb(247, 104, 8), rgb(102, 71, 240), rgb(0, 145, 255) 1turn);
+    width: 500px;
+    height: 500px;
+    z-index: -1;
+    animation: rotateOuterDivForHeroBannerButton 2s infinite linear;
+}
+
+@keyframes rotateOuterDivForHeroBannerButton {
+    from {
+        transform: translate(-50%, -50%) rotate(0deg) ;
+    }
+
+    to {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
